# tap-stackoverflow-sampledata

./: .gitignore  LICENSE.md  README.md  pyproject.toml
tap_stackoverflow_sampledata/: __init__.py  __main__.py  client.py  streams.py  tap.py
tap_stackoverflow_sampledata/tests/: test_core.py
tests/: __init__.py  test_core.py
tests/test_files/: Badges.xml  Comments.xml  PostLinks.xml  Posts.xml  Tags.xml  Users.xml  Votes.xml
