[tool.poetry]
name = "tap-stackoverflow-sampledata"
version = "0.0.1"
description = "`tap-stackoverflow-sampledata` is a Singer tap for stackoverflow-sampledata, built with the Meltano SDK for Singer Taps."
readme = "README.md"
authors = ["Dan Norman"]
keywords = [
    "ELT",
    "stackoverflow-sampledata",
]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.31.1" }
fs-s3fs = { version = "^1.1.1", optional = true}
lxml = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
singer-sdk = { version="^0.31.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_stackoverflow_sampledata"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_stackoverflow_sampledata"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-stackoverflow-sampledata = 'tap_stackoverflow_sampledata.tap:TapStackOverflowSampleData.cli'
