[project]
name = "tap-stackoverflow-sampledata"
version = "0.1.3"
description = "`tap-stackoverflow-sampledata` is a Singer tap for stackoverflow-sampledata, built with the Meltano SDK for Singer Taps."
authors = [{ name = "Dan Norman", email = "buzzcutnorman@gmail.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
keywords = [
    "ELT",
    "stackoverflow-sampledata",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "importlib-resources==6.4.* ; python_version < '3.9'",
    "singer-sdk[]~=0.39.0",
    "lxml>=5.2.2,<6",
]

[project.optional-dependencies]
s3 = ["fs-s3fs~=1.1.1"]

[project.scripts]
tap-stackoverflow-sampledata = "tap_stackoverflow_sampledata.tap:TapStackOverflowSampleData.cli"

[dependency-groups]
dev = [
    "pytest>=8",
    "singer-sdk[testing]~=0.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
src = ["tap_stackoverflow_sampledata"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_stackoverflow_sampledata"]

[tool.ruff.lint.pydocstyle]
convention = "google"
